--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,7 +3,8 @@ image: maven:latest
 stages:
   - test
 
-
+variables:
+  MAVEN_OPTS: "-Dmaven.repo.local=.m2/repository"
 
 services:
   - postgres
@@ -13,12 +14,10 @@ variables:
   POSTGRES_USER: postgres
   POSTGRES_PASSWORD: root
   POSTGRES_HOST_AUTH_METHOD: trust
-  MAVEN_OPTS: "-Dmaven.repo.local=.m2/repository"
 
 cache:
   key:
-    files:
-      - pom.xml
+    - $CI_JOB_NAME
   paths:
     - .m2/repository
 
