--- a/src/test/resources/dataset/testAnswerResourceController/moreAnswers.yml
+++ b/src/test/resources/dataset/testAnswerResourceController/moreAnswers.yml
@@ -59,7 +59,7 @@ answer:
   - id: 105
     date_accept_time: 2021-12-13 15:09:52.715570
     html_body: "Body of helpful and well written answer6"
-    is_deleted: false
+    is_deleted: true
     is_deleted_by_moderator: false
     is_helpful: false
     persist_date: 2021-12-13 15:09:52.715570
@@ -70,7 +70,7 @@ answer:
   - id: 106
     date_accept_time: 2021-12-13 15:09:52.715570
     html_body: "Body of helpful and well written answer7"
-    is_deleted: false
+    is_deleted: true
     is_deleted_by_moderator: false
     is_helpful: false
     persist_date: 2021-12-13 15:09:52.715570
@@ -89,3 +89,26 @@ answer:
     question_id: 101
     user_id: 103
 
+
+
+  - id: 108
+    date_accept_time: 2021-12-13 15:09:52.715570
+    html_body: "Body of helpful and well written answer9"
+    is_deleted: true
+    is_deleted_by_moderator: false
+    is_helpful: false
+    persist_date: 2021-12-13 15:09:52.715570
+    update_date: 2021-12-13 15:09:52.715570
+    question_id: 102
+    user_id: 102
+
+  - id: 109
+    date_accept_time: 2021-12-13 15:09:52.715570
+    html_body: "Body of helpful and well written answer10"
+    is_deleted: true
+    is_deleted_by_moderator: false
+    is_helpful: false
+    persist_date: 2021-12-13 15:09:52.715570
+    update_date: 2021-12-13 15:09:52.715570
+    question_id: 102
+    user_id: 102
