Update .gitlab-ci.yml file

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -26,7 +26,7 @@ cache:
     - .m2/repository
 
 Test project:
-  stage: test
+  stage: build&test
   script:
     - mvn $MAVEN_OPTS test
   artifacts:
