--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -28,7 +28,7 @@ cache:
 Test project:
   stage: build&test
   script:
-    - mvn $MAVEN_OPTS test
+    - mvn -Dtest="TestAuthenticationResourceController" $MAVEN_OPTS test
   artifacts:
     paths:
       - target/surefire-reports/TEST-*.xml
