Update .gitlab-ci.yml file

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -36,7 +36,7 @@ Test project:
       junit: target/surefire-reports/TEST-*.xml
 
 Package project:
-  image: openjdk:11-alpine
+  image: openjdk:11
   stage: package
   script:
     - ./mvnw $MAVEN_OPTS package
