--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,7 +2,7 @@
 image: maven:latest
 
 stages:
-  - build&test
+#  - build&test
   - package
   - dockerise
 
@@ -25,21 +25,21 @@ cache:
   paths:
     - .m2/repository
 
-Test project:
-  stage: build&test
-  script:
-    - mvn -Dtest="TestAuthenticationResourceController" $MAVEN_OPTS test
-  artifacts:
-    paths:
-      - target/surefire-reports/TEST-*.xml
-    reports:
-      junit: target/surefire-reports/TEST-*.xml
+#Test project:
+#  stage: build&test
+#  script:
+#    - mvn -Dtest="TestAuthenticationResourceController" $MAVEN_OPTS test
+#  artifacts:
+#    paths:
+#      - target/surefire-reports/TEST-*.xml
+#    reports:
+#      junit: target/surefire-reports/TEST-*.xml
 
 Package project:
   image: openjdk:11
   stage: package
   script:
-    - ./mvnw $MAVEN_OPTS package
+    - mvn $MAVEN_OPTS package
   artifacts:
     paths:
       - target/*.jar
