--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -25,20 +25,20 @@ cache:
   paths:
     - .m2/repository
 
-#Test project:
-#  stage: build&test
-#  script:
-#    - mvn -Dtest="TestAuthenticationResourceController" $MAVEN_OPTS test
-#  artifacts:
-#    paths:
-#      - target/surefire-reports/TEST-*.xml
-#    reports:
-#      junit: target/surefire-reports/TEST-*.xml
+Test project:
+  stage: build&test
+  script:
+    - mvn -Dtest="TestAuthenticationResourceController" $MAVEN_OPTS test
+  artifacts:
+    paths:
+      - target/surefire-reports/TEST-*.xml
+    reports:
+      junit: target/surefire-reports/TEST-*.xml
 
 Package project:
   stage: package
   script:
-    - mvn -Dtest="TestAuthenticationResourceController" $MAVEN_OPTS package
+    - mvn -Dmaven.test.skip=true $MAVEN_OPTS package
   artifacts:
     paths:
       - target/*.jar
