--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,9 +1,8 @@
-
 image: maven:3.8.5-jdk-11
 
 stages:
-  - build&test
-  - package
+#  - build&test
+#  - package
   - dockerise
 
 variables:
@@ -25,20 +24,33 @@ cache:
   paths:
     - .m2/repository
 
-Test project:
-  stage: build&test
-  script:
-    - mvn -Dtest="TestAuthenticationResourceController" $MAVEN_OPTS test
-  artifacts:
-    paths:
-      - target/surefire-reports/TEST-*.xml
-    reports:
-      junit: target/surefire-reports/TEST-*.xml
+#Test project:
+#  stage: build&test
+#  script:
+#    - mvn -Dtest="TestAuthenticationResourceController" $MAVEN_OPTS test
+#  artifacts:
+#    paths:
+#      - target/surefire-reports/TEST-*.xml
+#    reports:
+#      junit: target/surefire-reports/TEST-*.xml
+#
+#Package project:
+#  stage: package
+#  script:
+#    - mvn -Dmaven.test.skip=true $MAVEN_OPTS package
+#  artifacts:
+#    paths:
+#      - target/*.jar
 
-Package project:
-  stage: package
+Dockerise project:
+  stage: dockerise
+  image: docker:latest
+  when: manual
+  services:
+    - docker:dind
   script:
-    - mvn -Dmaven.test.skip=true $MAVEN_OPTS package
-  artifacts:
-    paths:
-      - target/*.jar
+    - "cp $(ls target/*.jar) docker/gitlabci.jar"
+    - cd docker
+    - docker build -t $CI_REGISTRY_IMAGE .
+    - docker login -u gitlab-ci-token -p $CI_BUILD_TOKEN git.kata.academy:5050
+    - docker push $CI_REGISTRY_IMAGE
