--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,20 +2,20 @@ image: maven:3.8.5-jdk-11
 
 stages:
 #  - build&test
-#  - package
+  - package
   - dockerise
 
 variables:
   MAVEN_OPTS: "-Dmaven.repo.local=.m2/repository"
 
-services:
-  - postgres
+#services:
+#  - postgres
 
-variables:
-  POSTGRES_DB: postgres
-  POSTGRES_USER: postgres
-  POSTGRES_PASSWORD: root
-  POSTGRES_HOST_AUTH_METHOD: trust
+#variables:
+#  POSTGRES_DB: postgres
+#  POSTGRES_USER: postgres
+#  POSTGRES_PASSWORD: root
+#  POSTGRES_HOST_AUTH_METHOD: trust
 
 cache:
   key:
@@ -33,23 +33,24 @@ cache:
 #      - target/surefire-reports/TEST-*.xml
 #    reports:
 #      junit: target/surefire-reports/TEST-*.xml
-#
-#Package project:
-#  stage: package
-#  script:
-#    - mvn -Dmaven.test.skip=true $MAVEN_OPTS package
-#  artifacts:
-#    paths:
-#      - target/*.jar
+
+Package project:
+  stage: package
+  script:
+    - mvn -Dmaven.test.skip=true $MAVEN_OPTS package
+  artifacts:
+    paths:
+      - target/*.jar
 
 Dockerise project:
   stage: dockerise
   image: docker:latest
-  when: manual
+  #when: manual
   services:
     - docker:dind
   script:
     - "cp $(ls target/*.jar) docker/gitlabci.jar"
+
     - cd docker
     - docker build -t $CI_REGISTRY_IMAGE .
     - docker login -u gitlab-ci-token -p $CI_BUILD_TOKEN git.kata.academy:5050
