--- a/pom.xml
+++ b/pom.xml
@@ -217,6 +217,13 @@
             <version>4.5.13</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.codehaus.groovy</groupId>
+            <artifactId>groovy-all</artifactId>
+            <version>2.4.6</version>
+            <scope>test</scope>
+        </dependency>
+
     </dependencies>
 
     <build>
