--- a/src/test/resources/dataset/userresourcecontroller/reputations.yml
+++ b/src/test/resources/dataset/userresourcecontroller/reputations.yml
@@ -1,19 +1,21 @@
 reputation:
-  - id : 101
-    author_id : 101
+  - id : 100
+    author_id : 100
     count : 100
     persist_date : 2021-12-13 15:09:52.715570
-    question_id : 101
+    type : 1
+  - id : 101
+    author_id : 101
+    count : 500
+    persist_date : 2021-12-13 15:09:52.715570
     type : 1
   - id : 102
     author_id : 102
-    count : 500
+    count : 100
     persist_date : 2021-12-13 15:09:52.715570
-    question_id : 102
     type : 1
   - id : 103
-    author_id : 103
-    count : 800
+    author_id : 102
+    count : 50
     persist_date : 2021-12-13 15:09:52.715570
-    question_id : 103
     type : 1
