--- a/src/test/resources/dataset/userresourcecontroller/users.yml
+++ b/src/test/resources/dataset/userresourcecontroller/users.yml
@@ -1,4 +1,17 @@
 user_entity:
+  - id: 100
+    about: "I'm Test user #100"
+    city: "Moscow"
+    full_name: "test 100"
+    password: "$2a$10$p94zVhwJKsg6CzDQAg1tPOwgUUa66.ITiPyhvJbYKIIZQ1i86UEpm"
+    email: "test100@mail.ru"
+    is_deleted: false
+    nickname: "test100"
+    image_link: "photo"
+    is_enabled: true
+    last_redaction_date: 2021-12-09 19:41:18.252588
+    persist_date: 2021-12-09 19:41:18.252588
+    role_id : 101
   - id: 101
     about: "I'm Test user #101"
     city: "Moscow"
@@ -18,7 +31,7 @@ user_entity:
     full_name: "test 102"
     password: "$2a$10$p94zVhwJKsg6CzDQAg1tPOwgUUa66.ITiPyhvJbYKIIZQ1i86UEpm"
     email: "test102@mail.ru"
-    is_deleted: false
+    is_deleted: true
     nickname: "test102"
     image_link: "photo"
     is_enabled: true
@@ -28,11 +41,24 @@ user_entity:
   - id: 103
     about: "I'm Test user #103"
     city: "Moscow"
-    full_name: "test 103"
+    full_name: "test 103 15"
     password: "$2a$10$p94zVhwJKsg6CzDQAg1tPOwgUUa66.ITiPyhvJbYKIIZQ1i86UEpm"
     email: "test103@mail.ru"
     is_deleted: false
     nickname: "test103"
+    image_link: "photo"
+    is_enabled: true
+    last_redaction_date: 2021-12-09 19:41:18.252588
+    persist_date: 2021-12-09 19:41:18.252588
+    role_id: 101
+  - id: 104
+    about: "I'm Test user #104"
+    city: "Moscow"
+    full_name: "test 104"
+    password: "$2a$10$p94zVhwJKsg6CzDQAg1tPOwgUUa66.ITiPyhvJbYKIIZQ1i86UEpm"
+    email: "test104@mail.ru"
+    is_deleted: false
+    nickname: "test104"
     image_link: "photo"
     is_enabled: true
     last_redaction_date: 2021-12-09 19:41:18.252588
