--- a/src/test/resources/dataset/userresourcecontroller/users_with_deleted_user.yml
+++ b/src/test/resources/dataset/userresourcecontroller/users_with_deleted_user.yml
@@ -1,40 +1,37 @@
 user_entity:
+  - id: 100
+    about: "I'm Test user #15"
+    city: "Moscow"
+    full_name: "test 1"
+    password: "$2y$10$V.SIL8/oJ/FpiKj.nD5LJO0YNFrx3NqE/uZmFUWJ9dgheXqM14KEC"
+    email: "user100@mail.ru"
+    nickname: "user1"
+    is_enabled: true
+    is_deleted: false
+    last_redaction_date: 2021-12-09 19:41:18.252588
+    persist_date: 2021-12-09 19:41:18.252588
+    role_id: 101
   - id: 101
-    about: "I'm Test user #101"
+    about: "I'm Test user #15"
     city: "Moscow"
-    full_name: "test 101"
-    password: "$2a$10$p94zVhwJKsg6CzDQAg1tPOwgUUa66.ITiPyhvJbYKIIZQ1i86UEpm"
-    email: "test15@mail.ru"
-    is_deleted: false
-    nickname: "test15"
-    image_link: "photo"
+    full_name: "test 3"
+    password: "$2y$10$V.SIL8/oJ/FpiKj.nD5LJO0YNFrx3NqE/uZmFUWJ9dgheXqM14KEC"
+    email: "user101@mail.ru"
+    nickname: "user21"
     is_enabled: true
-    last_redaction_date: 2021-12-09 19:41:18.252588
-    persist_date: 2021-12-09 19:41:18.252588
-    role_id : 101
-  - id: 102
-    about: "I'm Test user #102"
-    city: "Moscow"
-    full_name: "test 102"
-    password: "$2a$10$p94zVhwJKsg6CzDQAg1tPOwgUUa66.ITiPyhvJbYKIIZQ1i86UEpm"
-    email: "test102@mail.ru"
     is_deleted: true
-    nickname: "test102"
-    image_link: "photo"
-    is_enabled: true
     last_redaction_date: 2021-12-09 19:41:18.252588
     persist_date: 2021-12-09 19:41:18.252588
-    role_id : 101
-  - id: 103
-    about: "I'm Test user #103"
+    role_id: 101
+  - id: 102
+    about: "I'm Test user #15"
     city: "Moscow"
-    full_name: "test 103"
-    password: "$2a$10$p94zVhwJKsg6CzDQAg1tPOwgUUa66.ITiPyhvJbYKIIZQ1i86UEpm"
-    email: "test103@mail.ru"
-    is_deleted: false
-    nickname: "test103"
-    image_link: "photo"
+    full_name: "test 2"
+    password: "$2y$10$V.SIL8/oJ/FpiKj.nD5LJO0YNFrx3NqE/uZmFUWJ9dgheXqM14KEC"
+    email: "user102@mail.ru"
+    nickname: "user31"
     is_enabled: true
+    is_deleted: false
     last_redaction_date: 2021-12-09 19:41:18.252588
     persist_date: 2021-12-09 19:41:18.252588
     role_id: 101
