--- a/src/test/resources/dataset/testUserResourceController/testGetAllBookMarksInUserProfile/questions.yml
+++ b/src/test/resources/dataset/testUserResourceController/testGetAllBookMarksInUserProfile/questions.yml
@@ -20,3 +20,24 @@ question:
     persist_date : 2021-12-13 15:09:52.715570
     title : "test3"
     user_id : 106
+  - id : 104
+    description : "test4"
+    is_deleted : false
+    last_redaction_date : 2021-12-13 15:09:52.715570
+    persist_date : 2021-12-13 15:09:52.715570
+    title : "test4"
+    user_id : 101
+  - id : 105
+    description : "test5"
+    is_deleted : false
+    last_redaction_date : 2021-12-13 15:09:52.715570
+    persist_date : 2021-12-13 15:09:52.715570
+    title : "test5"
+    user_id : 102
+  - id : 106
+    description : "test6"
+    is_deleted : false
+    last_redaction_date : 2021-12-13 15:09:52.715570
+    persist_date : 2021-12-13 15:09:52.715570
+    title : "test6"
+    user_id : 104
