--- a/src/test/resources/dataset/testUserResourceController/testGetAllBookMarksInUserProfile/votes_on_questions.yml
+++ b/src/test/resources/dataset/testUserResourceController/testGetAllBookMarksInUserProfile/votes_on_questions.yml
@@ -19,3 +19,23 @@ votes_on_questions:
     question_id : 103
     user_id : 106
     vote : "DOWN_VOTE"
+  - id : 104
+    persist_date : 2021-12-13 15:09:52.715570
+    question_id : 104
+    user_id : 102
+    vote : "UP_VOTE"
+  - id : 105
+    persist_date : 2021-12-13 15:09:52.715570
+    question_id : 105
+    user_id : 105
+    vote : "UP_VOTE"
+  - id : 106
+    persist_date : 2021-12-13 15:09:52.715570
+    question_id : 106
+    user_id : 104
+    vote : "UP_VOTE"
+  - id : 107
+    persist_date : 2021-12-13 15:09:52.715570
+    question_id : 106
+    user_id : 106
+    vote : "DOWN_VOTE"
