--- a/src/test/resources/dataset/testUserResourceController/testGetTop10UsersForWeekRankedByNumberOfQuestions/answers.yml
+++ b/src/test/resources/dataset/testUserResourceController/testGetTop10UsersForWeekRankedByNumberOfQuestions/answers.yml
@@ -5,7 +5,8 @@ answer:
     is_deleted: false
     is_deleted_by_moderator: false
     is_helpful: false
-    persist_date: 2022-05-02 13:15:30.241299
+    persist_date: "groovy: Calendar cal = Calendar.getInstance();
+                            return cal.getTime();"
     update_date: 2022-05-02 13:15:30.241299
     question_id: 101
     user_id: 107
@@ -15,7 +16,8 @@ answer:
     is_deleted: false
     is_deleted_by_moderator: false
     is_helpful: false
-    persist_date: 2022-05-02 13:15:30.241299
+    persist_date: "groovy: Calendar cal = Calendar.getInstance();
+                            return cal.getTime();"
     update_date: 2022-05-02 13:15:30.241299
     question_id: 101
     user_id: 109
@@ -25,7 +27,8 @@ answer:
     is_deleted: false
     is_deleted_by_moderator: false
     is_helpful: false
-    persist_date: 2022-05-02 13:15:30.241299
+    persist_date: "groovy: Calendar cal = Calendar.getInstance();
+                            return cal.getTime();"
     update_date: 2022-05-02 13:15:30.241299
     question_id: 101
     user_id: 100
@@ -35,7 +38,8 @@ answer:
     is_deleted: false
     is_deleted_by_moderator: false
     is_helpful: false
-    persist_date: 2022-05-02 13:15:30.241299
+    persist_date: "groovy: Calendar cal = Calendar.getInstance();
+                            return cal.getTime();"
     update_date: 2022-05-02 13:15:30.241299
     question_id: 101
     user_id: 114
@@ -45,7 +49,8 @@ answer:
     is_deleted: false
     is_deleted_by_moderator: false
     is_helpful: false
-    persist_date: 2022-05-02 13:15:30.242300
+    persist_date: "groovy: Calendar cal = Calendar.getInstance();
+                            return cal.getTime();"
     update_date: 2022-05-02 13:15:30.242300
     question_id: 101
     user_id: 112
@@ -55,7 +60,8 @@ answer:
     is_deleted: false
     is_deleted_by_moderator: false
     is_helpful: false
-    persist_date: 2022-05-02 13:15:30.242300
+    persist_date: "groovy: Calendar cal = Calendar.getInstance();
+                            return cal.getTime();"
     update_date: 2022-05-02 13:15:30.242300
     question_id: 101
     user_id: 109
@@ -65,7 +71,8 @@ answer:
     is_deleted: false
     is_deleted_by_moderator: false
     is_helpful: false
-    persist_date: 2022-05-02 13:15:30.242300
+    persist_date: "groovy: Calendar cal = Calendar.getInstance();
+                            return cal.getTime();"
     update_date: 2022-05-02 13:15:30.242300
     question_id: 101
     user_id: 114
@@ -75,7 +82,8 @@ answer:
     is_deleted: false
     is_deleted_by_moderator: false
     is_helpful: false
-    persist_date: 2022-05-02 13:15:30.242300
+    persist_date: "groovy: Calendar cal = Calendar.getInstance();
+                            return cal.getTime();"
     update_date: 2022-05-02 13:15:30.242300
     question_id: 101
     user_id: 102
@@ -85,7 +93,8 @@ answer:
     is_deleted: false
     is_deleted_by_moderator: false
     is_helpful: false
-    persist_date: 2022-05-02 13:15:30.242300
+    persist_date: "groovy: Calendar cal = Calendar.getInstance();
+                            return cal.getTime();"
     update_date: 2022-05-02 13:15:30.242300
     question_id: 101
     user_id: 112
@@ -95,7 +104,8 @@ answer:
     is_deleted: false
     is_deleted_by_moderator: false
     is_helpful: false
-    persist_date: 2022-05-02 13:15:30.242300
+    persist_date: "groovy: Calendar cal = Calendar.getInstance();
+                            return cal.getTime();"
     update_date: 2022-05-02 13:15:30.242300
     question_id: 101
     user_id: 108
@@ -105,7 +115,8 @@ answer:
     is_deleted: false
     is_deleted_by_moderator: false
     is_helpful: false
-    persist_date: 2022-05-02 13:15:30.242300
+    persist_date: "groovy: Calendar cal = Calendar.getInstance();
+                            return cal.getTime();"
     update_date: 2022-05-02 13:15:30.242300
     question_id: 101
     user_id: 112
@@ -115,7 +126,8 @@ answer:
     is_deleted: false
     is_deleted_by_moderator: false
     is_helpful: false
-    persist_date: 2022-05-02 13:15:30.242300
+    persist_date: "groovy: Calendar cal = Calendar.getInstance();
+                            return cal.getTime();"
     update_date: 2022-05-02 13:15:30.242300
     question_id: 101
     user_id: 113
@@ -125,7 +137,8 @@ answer:
     is_deleted: false
     is_deleted_by_moderator: false
     is_helpful: false
-    persist_date: 2022-05-02 13:15:30.242300
+    persist_date: "groovy: Calendar cal = Calendar.getInstance();
+                            return cal.getTime();"
     update_date: 2022-05-02 13:15:30.242300
     question_id: 101
     user_id: 106
@@ -135,7 +148,8 @@ answer:
     is_deleted: false
     is_deleted_by_moderator: false
     is_helpful: false
-    persist_date: 2022-05-02 13:15:30.243299
+    persist_date: "groovy: Calendar cal = Calendar.getInstance();
+                            return cal.getTime();"
     update_date: 2022-05-02 13:15:30.243299
     question_id: 101
     user_id: 109
@@ -145,7 +159,8 @@ answer:
     is_deleted: false
     is_deleted_by_moderator: false
     is_helpful: false
-    persist_date: 2022-05-02 13:15:30.243299
+    persist_date: "groovy: Calendar cal = Calendar.getInstance();
+                            return cal.getTime();"
     update_date: 2022-05-02 13:15:30.243299
     question_id: 101
     user_id: 105
@@ -155,7 +170,8 @@ answer:
     is_deleted: false
     is_deleted_by_moderator: false
     is_helpful: false
-    persist_date: 2022-05-02 13:15:30.243299
+    persist_date: "groovy: Calendar cal = Calendar.getInstance();
+                            return cal.getTime();"
     update_date: 2022-05-02 13:15:30.243299
     question_id: 101
     user_id: 112
@@ -165,7 +181,8 @@ answer:
     is_deleted: false
     is_deleted_by_moderator: false
     is_helpful: false
-    persist_date: 2022-05-02 13:15:30.243299
+    persist_date: "groovy: Calendar cal = Calendar.getInstance();
+                            return cal.getTime();"
     update_date: 2022-05-02 13:15:30.243299
     question_id: 101
     user_id: 112
@@ -175,7 +192,8 @@ answer:
     is_deleted: false
     is_deleted_by_moderator: false
     is_helpful: false
-    persist_date: 2022-05-02 13:15:30.243299
+    persist_date: "groovy: Calendar cal = Calendar.getInstance();
+                            return cal.getTime();"
     update_date: 2022-05-02 13:15:30.243299
     question_id: 101
     user_id: 104
@@ -185,7 +203,8 @@ answer:
     is_deleted: false
     is_deleted_by_moderator: false
     is_helpful: false
-    persist_date: 2022-05-02 13:15:30.243299
+    persist_date: "groovy: Calendar cal = Calendar.getInstance();
+                            return cal.getTime();"
     update_date: 2022-05-02 13:15:30.243299
     question_id: 101
     user_id: 110
@@ -195,7 +214,8 @@ answer:
     is_deleted: false
     is_deleted_by_moderator: false
     is_helpful: false
-    persist_date: 2022-05-02 13:15:30.243299
+    persist_date: "groovy: Calendar cal = Calendar.getInstance();
+                            return cal.getTime();"
     update_date: 2022-05-02 13:15:30.243299
     question_id: 101
     user_id: 102
@@ -205,7 +225,8 @@ answer:
     is_deleted: false
     is_deleted_by_moderator: false
     is_helpful: false
-    persist_date: 2022-05-02 13:15:30.248298
+    persist_date: "groovy: Calendar cal = Calendar.getInstance();
+                            return cal.getTime();"
     update_date: 2022-05-02 13:15:30.248298
     question_id: 101
     user_id: 108
@@ -215,7 +236,8 @@ answer:
     is_deleted: false
     is_deleted_by_moderator: false
     is_helpful: false
-    persist_date: 2022-05-02 13:15:30.248298
+    persist_date: "groovy: Calendar cal = Calendar.getInstance();
+                            return cal.getTime();"
     update_date: 2022-05-02 13:15:30.248298
     question_id: 101
     user_id: 102
@@ -225,7 +247,8 @@ answer:
     is_deleted: false
     is_deleted_by_moderator: false
     is_helpful: false
-    persist_date: 2022-05-02 13:15:30.248298
+    persist_date: "groovy: Calendar cal = Calendar.getInstance();
+                            return cal.getTime();"
     update_date: 2022-05-02 13:15:30.248298
     question_id: 101
     user_id: 101
@@ -235,7 +258,8 @@ answer:
     is_deleted: false
     is_deleted_by_moderator: false
     is_helpful: false
-    persist_date: 2022-05-02 13:15:30.248298
+    persist_date: "groovy: Calendar cal = Calendar.getInstance();
+                            return cal.getTime();"
     update_date: 2022-05-02 13:15:30.248298
     question_id: 101
     user_id: 106
@@ -245,7 +269,8 @@ answer:
     is_deleted: false
     is_deleted_by_moderator: false
     is_helpful: false
-    persist_date: 2022-05-02 13:15:30.248298
+    persist_date: "groovy: Calendar cal = Calendar.getInstance();
+                            return cal.getTime();"
     update_date: 2022-05-02 13:15:30.248298
     question_id: 101
     user_id: 105
@@ -255,7 +280,8 @@ answer:
     is_deleted: false
     is_deleted_by_moderator: false
     is_helpful: false
-    persist_date: 2022-05-02 13:15:30.248298
+    persist_date: "groovy: Calendar cal = Calendar.getInstance();
+                            return cal.getTime();"
     update_date: 2022-05-02 13:15:30.248298
     question_id: 101
     user_id: 105
@@ -265,7 +291,8 @@ answer:
     is_deleted: false
     is_deleted_by_moderator: false
     is_helpful: false
-    persist_date: 2022-05-02 13:15:30.248298
+    persist_date: "groovy: Calendar cal = Calendar.getInstance();
+                            return cal.getTime();"
     update_date: 2022-05-02 13:15:30.248298
     question_id: 101
     user_id: 103
@@ -275,7 +302,8 @@ answer:
     is_deleted: false
     is_deleted_by_moderator: false
     is_helpful: false
-    persist_date: 2022-05-02 13:15:30.249298
+    persist_date: "groovy: Calendar cal = Calendar.getInstance();
+                            return cal.getTime();"
     update_date: 2022-05-02 13:15:30.249298
     question_id: 101
     user_id: 114
@@ -285,7 +313,8 @@ answer:
     is_deleted: false
     is_deleted_by_moderator: false
     is_helpful: false
-    persist_date: 2022-05-02 13:15:30.249298
+    persist_date: "groovy: Calendar cal = Calendar.getInstance();
+                            return cal.getTime();"
     update_date: 2022-05-02 13:15:30.249298
     question_id: 101
     user_id: 114
@@ -295,7 +324,8 @@ answer:
     is_deleted: false
     is_deleted_by_moderator: false
     is_helpful: false
-    persist_date: 2022-05-02 13:15:30.249298
+    persist_date: "groovy: Calendar cal = Calendar.getInstance();
+                            return cal.getTime();"
     update_date: 2022-05-02 13:15:30.249298
     question_id: 101
     user_id: 111
@@ -305,7 +335,8 @@ answer:
     is_deleted: false
     is_deleted_by_moderator: false
     is_helpful: false
-    persist_date: 2022-05-02 13:15:30.249298
+    persist_date: "groovy: Calendar cal = Calendar.getInstance();
+                            return cal.getTime();"
     update_date: 2022-05-02 13:15:30.249298
     question_id: 101
     user_id: 102
@@ -315,7 +346,8 @@ answer:
     is_deleted: false
     is_deleted_by_moderator: false
     is_helpful: false
-    persist_date: 2022-05-02 13:15:30.249298
+    persist_date: "groovy: Calendar cal = Calendar.getInstance();
+                            return cal.getTime();"
     update_date: 2022-05-02 13:15:30.249298
     question_id: 101
     user_id: 100
@@ -325,7 +357,8 @@ answer:
     is_deleted: false
     is_deleted_by_moderator: false
     is_helpful: false
-    persist_date: 2022-05-02 13:15:30.249298
+    persist_date: "groovy: Calendar cal = Calendar.getInstance();
+                            return cal.getTime();"
     update_date: 2022-05-02 13:15:30.249298
     question_id: 101
     user_id: 101
@@ -335,7 +368,8 @@ answer:
     is_deleted: false
     is_deleted_by_moderator: false
     is_helpful: false
-    persist_date: 2022-05-02 13:15:30.249298
+    persist_date: "groovy: Calendar cal = Calendar.getInstance();
+                            return cal.getTime();"
     update_date: 2022-05-02 13:15:30.249298
     question_id: 101
     user_id: 110
@@ -345,7 +379,8 @@ answer:
     is_deleted: false
     is_deleted_by_moderator: false
     is_helpful: false
-    persist_date: 2022-05-02 13:15:30.249298
+    persist_date: "groovy: Calendar cal = Calendar.getInstance();
+                            return cal.getTime();"
     update_date: 2022-05-02 13:15:30.249298
     question_id: 101
     user_id: 108
@@ -355,7 +390,8 @@ answer:
     is_deleted: false
     is_deleted_by_moderator: false
     is_helpful: false
-    persist_date: 2022-05-02 13:15:30.249298
+    persist_date: "groovy: Calendar cal = Calendar.getInstance();
+                            return cal.getTime();"
     update_date: 2022-05-02 13:15:30.249298
     question_id: 101
     user_id: 105
@@ -365,7 +401,8 @@ answer:
     is_deleted: false
     is_deleted_by_moderator: false
     is_helpful: false
-    persist_date: 2022-05-02 13:15:30.249298
+    persist_date: "groovy: Calendar cal = Calendar.getInstance();
+                            return cal.getTime();"
     update_date: 2022-05-02 13:15:30.249298
     question_id: 101
     user_id: 101
@@ -375,7 +412,8 @@ answer:
     is_deleted: false
     is_deleted_by_moderator: false
     is_helpful: false
-    persist_date: 2022-05-02 13:15:30.249298
+    persist_date: "groovy: Calendar cal = Calendar.getInstance();
+                            return cal.getTime();"
     update_date: 2022-05-02 13:15:30.249298
     question_id: 101
     user_id: 107
@@ -385,7 +423,8 @@ answer:
     is_deleted: false
     is_deleted_by_moderator: false
     is_helpful: false
-    persist_date: 2022-05-02 13:15:30.250298
+    persist_date: "groovy: Calendar cal = Calendar.getInstance();
+                            return cal.getTime();"
     update_date: 2022-05-02 13:15:30.250298
     question_id: 101
     user_id: 113
@@ -395,7 +434,8 @@ answer:
     is_deleted: false
     is_deleted_by_moderator: false
     is_helpful: false
-    persist_date: 2022-05-02 13:15:30.250298
+    persist_date: "groovy: Calendar cal = Calendar.getInstance();
+                            return cal.getTime();"
     update_date: 2022-05-02 13:15:30.250298
     question_id: 101
     user_id: 108
