--- a/src/test/resources/dataset/ChatResourceController/chat.yml
+++ b/src/test/resources/dataset/ChatResourceController/chat.yml
@@ -1,5 +1,6 @@
 chat:
   - id: 101
     chat_type: 1
+    image: "test_image_link_for_chat#101"
     persist_date: 2021-12-09 19:41:18.252588
     title: "test chat with id = 101"
