--- a/src/test/resources/dataset/ChatResourceController/getAllSingleChatDtoByUserId.yml
+++ b/src/test/resources/dataset/ChatResourceController/getAllSingleChatDtoByUserId.yml
@@ -9,6 +9,7 @@ user_entity:
     password: "$2a$10$Dbl/hKOLzLUVMn/ahtgPcOA6IrZzLE2bVBW/sDumCSUi8KZTecLnC"
     email: "user1@mail.ru"
     is_deleted: false
+    image_link: avatar1.png
     is_enabled: true
     last_redaction_date: 2022-05-23 20:02:51.654701
     persist_date: 2022-05-23 20:02:51.654000
@@ -18,6 +19,7 @@ user_entity:
     password: "$2a$10$Dbl/hKOLzLUVMn/ahtgPcOA6IrZzLE2bVBW/sDumCSUi8KZTecLnC"
     email: "user2@mail.ru"
     is_deleted: false
+    image_link: avatar2.png
     is_enabled: true
     last_redaction_date: 2022-05-23 20:02:51.654701
     persist_date: 2022-05-23 20:02:51.654000
@@ -27,6 +29,7 @@ user_entity:
     password: "$2a$10$Dbl/hKOLzLUVMn/ahtgPcOA6IrZzLE2bVBW/sDumCSUi8KZTecLnC"
     email: "user2@mail.ru"
     is_deleted: false
+    image_link: avatar3.png
     is_enabled: true
     last_redaction_date: 2022-05-23 20:02:51.654701
     persist_date: 2022-05-23 20:02:51.654000
@@ -34,59 +37,74 @@ user_entity:
 chat:
   - id: 1
     chat_type: 1
-    persist_date: 2022-05-23 20:02:51.654000
+    persist_date: 2022-05-23 20:02:51.654
     title: Test SingleChat1
   - id: 2
     chat_type: 1
-    persist_date: 2022-05-23 20:02:51.654000
+    persist_date: 2022-05-23 20:02:51.654
     title: Test SingleChat2
   - id: 3
     chat_type: 1
-    persist_date: 2022-05-23 20:02:51.654000
+    persist_date: 2022-05-23 20:02:51.654
     title: Test SingleChat3
   - id: 4
-    chat_type: 2
-    persist_date: 2022-05-23 20:02:51.654000
+    chat_type: 1
+    persist_date: 2022-05-23 20:02:51.654
     title: Test SingleChat4
   - id: 5
     chat_type: 1
-    persist_date: 2022-05-23 20:02:51.654000
+    persist_date: 2022-05-23 20:02:51.654
     title: Test SingleChat5
 single_chat:
   - chat_id: 1
     use_two_id: 3
     user_one_id: 1
   - chat_id: 2
-    use_two_id: 2
-    user_one_id: 1
+    use_two_id: 1
+    user_one_id: 2
   - chat_id: 3
     use_two_id: 3
     user_one_id: 2
+  - chat_id: 4
+    use_two_id: 2
+    user_one_id: 3
   - chat_id: 5
     use_two_id: 3
     user_one_id: 1
 message:
   - id: 1
-    last_redaction_date: 2022-05-23 20:02:51.654000
+    last_redaction_date: 2022-05-23 20:02:51.654
     message: Test message №1
-    persist_date: 2022-05-23 20:02:51.654000
+    persist_date: 2022-06-23 20:02:51.654000
     chat_id: 1
     user_sender_id: 1
   - id: 2
-    last_redaction_date: 2022-05-23 20:02:51.654000
+    last_redaction_date: 2022-05-23 20:02:51.654
     message: Test message №2
-    persist_date: 2022-05-23 20:02:51.654000
+    persist_date: 2022-05-2 20:02:51.654000
     chat_id: 1
     user_sender_id: 2
   - id: 3
-    last_redaction_date: 2022-05-23 20:02:51.654000
+    last_redaction_date: 2022-05-23 20:02:51.654
     message: Test message №3
-    persist_date: 2022-05-23 20:02:51.654000
-    chat_id: 1
+    persist_date: 2022-04-7 20:02:51.654000
+    chat_id: 2
     user_sender_id: 1
   - id: 4
-    last_redaction_date: 2022-05-23 20:02:51.654000
-    message: Test message №4
+    last_redaction_date: 2022-05-23 20:02:51.654
+    message: Test message №3
     persist_date: 2022-05-23 20:02:51.654000
     chat_id: 3
+    user_sender_id: 3
+  - id: 4
+    last_redaction_date: 2022-05-23 20:02:51.654
+    message: Test message №4
+    persist_date: 2022-05-23 20:02:51.654
+    chat_id: 4
+    user_sender_id: 3
+  - id: 4
+    last_redaction_date: 2022-05-23 20:02:51.654
+    message: Test message №5
+    persist_date: 2022-06-22 20:02:51.654
+    chat_id: 5
     user_sender_id: 3
