--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -1,5 +1,5 @@
 
-spring.jpa.show-sql=true
+#spring.jpa.show-sql=true
 spring.jpa.open-in-view=false
 spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.properties.hibernate.enable_lazy_load_no_trans=false
@@ -14,6 +14,6 @@ spring.jpa.properties.hibernate.jdbc.batch_versioned_data=true
 spring.datasource.url=jdbc:postgresql://${DB_HOST}:${DB_PORT}/${DB_NAME}?characterEncoding=UTF-8&useUnicode=true&useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
 spring.datasource.username=${DB_USERNAME}
 spring.datasource.password=${DB_PASSWORD}
-server.port = 8091
+server.port = ${SERVER_PORT}
 jwt.secret=very_very_long_and_very_secret_key
 jwt.expiration-in-sec=86400
