--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -11,9 +11,12 @@ spring.jpa.properties.hibernate.order_updates=true
 spring.jpa.properties.hibernate.jdbc.batch_versioned_data=true
 
 
-spring.datasource.url=jdbc:postgresql://${DB_HOST}:${DB_PORT}/${DB_NAME}?characterEncoding=UTF-8&useUnicode=true&useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
-spring.datasource.username=${DB_USERNAME}
-spring.datasource.password=${DB_PASSWORD}
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres?characterEncoding=UTF-8&useUnicode=true&useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
+#spring.datasource.url=jdbc:postgresql://${DB_HOST}:${DB_PORT}/${DB_NAME}?characterEncoding=UTF-8&useUnicode=true&useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
+spring.datasource.username=postgres
+#spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=rootroot
+#spring.datasource.password=${DB_PASSWORD}
 server.port = 8091
 jwt.secret=very_very_long_and_very_secret_key
 jwt.expiration-in-sec=86400
