--- a/src/test/resources/dataset/ChatResourceController/ChatSearch/group_chat.yml
+++ b/src/test/resources/dataset/ChatResourceController/ChatSearch/group_chat.yml
@@ -1,3 +1,5 @@
 group_chat:
   - chat_id: 101
-  - chat_id: 105
+    title: "group chat with id = 101"
+  - chat_id: 102
+    title: "group chat with id = 102"
